Add buttons to download, to list available or missing documentation files

--- a/Resources/editor.md.html
+++ b/Resources/editor.md.html
@@ -6,6 +6,7 @@
     <link href="/style/simplemde.min.css" rel="stylesheet">
     <link href="/style/atom-one-dark.css" rel="stylesheet">
     <link href="/style/style.css" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet">
 </head>
 
 <body class="container-fluid">
