--- a/Resources/diff.html
+++ b/Resources/diff.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="container-fluid">
-    <h1>{{title}}</h1>
-    <div class="full-height" id="destination-elem-id">{{diff}}</div>
+    <h1>$4DEVAL($1)</h1>
+    <div class="full-height" id="destination-elem-id">$4DEVAL($2)</div>
     <script src="/js/highlight.pack.js"></script>
     <script src="/js/highlight.4d.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/diff2html/bundles/js/diff2html.min.js"></script>
