--- a/Resources/editor.html
+++ b/Resources/editor.html
@@ -6,11 +6,12 @@
     <link href="/style/simplemde.min.css" rel="stylesheet">
     <link href="/style/atom-one-dark.css" rel="stylesheet">
     <link href="/style/style.css" rel="stylesheet">
+    <link href="/style/$4DEVAL($2)" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet">
 </head>
 
 <body class="container-fluid">
-    <textarea class="col-md-6 full-height" id="pad">Write your text here..</textarea>
+    <textarea class="col-md-6 full-height" id="pad">$4DEVAL($1)</textarea>
     <script src="/js/highlight.pack.js"></script>
     <script src="/js/highlight.4d.min.js"></script>
     <script src="/js/simplemde.min.js"></script>
