--- a/Resources/list.html
+++ b/Resources/list.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="container-fluid">
-    <h1>{{title}}</h1>
-    <div class="col-md-6 full-height">{{lists}}</div>
+    <h1>$4DEVAL($1)</h1>
+    <div class="col-md-6 full-height">$4DEVAL($2)</div>
     <script src="/js/highlight.pack.js"></script>
     <script src="/js/highlight.4d.min.js"></script>
 </body>
